HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuCaptureHeapProvenance/Expected.uv
//! Expected diagnostic metadata for the GpuCaptureHeapProvenance rejected-source specimen.

expectedDiagnostic("E-CON-0150", "rule.20.GpuCapture-HeapProv-Err")
